# sangria-net

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile.test  Makefile  README.md  Sangria-Architecture.md  Sangria-Overview.md  TESTING.md  docker-compose.dev.yml  docker-compose.test.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  sangria_test_seed.txt  test-all.sh
.github/workflows/: ci.yml  deploy-sdks.yml  publish-python-sdk.yml  publish-ts-sdk.yml  release.yaml  release.yml  test-main.yml  test-pr.yml  tests.yml
backend/: .env.example  .golangci.yml  CLAUDE.md  Dockerfile.dev  Dockerfile.test  EMAIL_SETUP.md  README.md  go.mod  go.sum  main.go  railway.toml  test.sh
backend/adminHandlers/: apiKeyApproval.go  invitations.go  merchants.go  transactions.go  treasury.go  wallets.go  webhooks.go  withdrawals.go
backend/apiKeyRequestHandlers/: requests.go
backend/auth/: apiKeyHandlers.go  csrf.go  csrf_middleware.go  hash.go  keyStore.go  merchantKeys.go  middleware.go  organization.go  transactionHandlers.go  (+1 more)
dbSchema/: .env.example  CLAUDE.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  schema.ts  tsconfig.json
deployment/: DEPLOYMENT.md  SDK_VERSIONS.md
frontend/: .env.example  .gitignore  CLAUDE.md  Dockerfile.dev  README.md  SECURITY.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  railway.toml  tsconfig.json
guides-and-knowledge/: ARCHITECTURE.md  hurdles.md
mythos/: .env.example  CLAUDE.md  Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
playground/: README.md  mock_sangria_backend.py  pyproject.toml
scripts/: README.md  mock-facilitator.py  release.sh  test-dev.sh  test-pre-commit.sh  test-release.sh  test-setup.sh
sdk/: README.md
sdk/python/: README.md  coverage.xml  pyproject.toml  test.sh  test_errors.py
sdk/python/src/sangria_merchant_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/src/sangria_sdk/: __init__.py  _http.py  auth.py  client.py  errors.py  fastapi.py  models.py
sdk/python/src/sangria_sdk/adapters/: fastapi.py
sdk/sangria-py/: .flake8  mypy.ini  pyproject.toml
sdk/sangria-py/src/sangria_sdk/: __init__.py  _http.py  client.py  models.py
tests/: eslint.config.js  package.json  pnpm-lock.yaml
wallet/: __init__.py  wallet.py
(+298 files in other folders)
