[project]
name = "sangria"
version = "0.1.0"
description = "Python Merchant SDK for Sangria payment preflight and settlement"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Sangria Network"},
]
keywords = ["payments", "x402", "web3", "fastapi", "merchant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/GTG-Labs/sangria-net"
Repository = "https://github.com/GTG-Labs/sangria-net.git"
Issues = "https://github.com/GTG-Labs/sangria-net/issues"
Documentation = "https://github.com/GTG-Labs/sangria-net#readme"

[project.optional-dependencies]
fastapi = ["fastapi>=0.135.1"]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "bandit>=1.7.0",
  "safety>=2.0.0",
  "fastapi>=0.135.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
